# native-property

./: .env.example  .gitignore  DEPLOYMENT.md  DOCKER.md  E2E.md  ENTERPRISE_ENHANCEMENTS_SUMMARY.md  ENTERPRISE_SECURITY.md  FACIAL_AUTH.md  Makefile  PRODUCTION_ENV_TEMPLATE.md  QUICK_DEPLOY.md  README.md  SECURITY.md  TAURI_DESKTOP.md  TESTING.md  build-and-push.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  tauri-ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  jest.config.js  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
docs/: docusaurus.config.ts  identity-roles.md  sidebars.ts
docs/docs/: README.md  intro.md
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  cypress.config.ts  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/cypress/: .eslintrc.json  tsconfig.json
frontend/src/: App.tsx  index.css  (+1 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: main-capability.json
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tests.rs
k8s/: deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml  vault-secrets-reference.md
make-commands-tests/: .env.test  .gitignore  README.md  TROUBLESHOOTING.md  cypress.config.ts  package.json  tsconfig.json
supabase/: POSTGREST_CONFIG_NOTE.sql
(+159 files in other folders)
